--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@
   
    /* margin-left: 800px; 
    float: right !important;  */
-  z-index: 1 ;
+  z-index: 1 !important;
   }  
 
 .reference-card{
