--- a/src/App.css
+++ b/src/App.css
@@ -194,6 +194,9 @@
   border-radius: 10px;
   background-color: rgba(22, 22, 22, 0.7);
 }
+.project-card:hover {
+  cursor: pointer;
+}
 
 .issue-card{
   color: white;
